# multimodal-embedding-retrieval

./: .gitattributes  .gitignore  MEH570 - Derin Öğrenme Proje Konusu Öneri Formu - 2024 245172015 .docx  README.txt  presentation.md  pyproject.toml
assets/: model_architecture.txt
notebooks/: dataset_exploration.ipynb
outputs/: config.json  metrics_epoch_1.json  metrics_epoch_10.json  metrics_epoch_11.json  metrics_epoch_12.json  metrics_epoch_13.json  metrics_epoch_14.json  metrics_epoch_15.json  metrics_epoch_16.json  metrics_epoch_17.json  metrics_epoch_18.json  metrics_epoch_2.json  metrics_epoch_3.json  metrics_epoch_4.json  metrics_epoch_5.json  metrics_epoch_6.json  metrics_epoch_7.json  metrics_epoch_8.json  metrics_epoch_9.json  test_metrics.json
scripts/: ascii_to_image.py  plot_metrics.py
src/derin_ogrenme/: __init__.py  train.py
src/derin_ogrenme/data/: dataset.py  example.py
src/derin_ogrenme/models/: encoders.py  training.py
src/derin_ogrenme/utils/: data_utils.py  visualization_examples.py
